--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <h1>Prima repo</h1>
-    <h2>sottotitolo</h2>
+    <h2>sottotitolo</h2>+
+    <h3>Gianluca Pesce</h3>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste aspernatur cumque, delectus, perferendis enim libero nulla tenetur qui esse est, a totam assumenda aliquam nam hic soluta quod sit obcaecati.</p>
 </body>
 </html>
